--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "backpack/activity-log",
+    "name": "chenalon/laravel-backlog-activity-log",
     "description": "Activity Log for Backpack",
     "license": "MIT",
     "authors": [
